<resources>
    <string name="app_name">WearShare</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login_page">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Belum punya akun? Register</string>
    <string name="register">Register</string>
    <string name="title_signup_page">Lengkapi data dibawah ini</string>
    <string name="name">Name</string>
    <string name="sign_in">Sudah punya akun? Login</string>
    <string name="logo_description">Logo</string>
    <string name="title_mitra">Mitra</string>
    <string name="title_panti">Panti Asuhan</string>
    <string name="nama_panti">Name</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lokasi">Lokasi</string>
    <string name="isi_deskripsi">Mitra pengolahan limbah baju adalah tempat untuk menangani pakaian bekas yang tidak layak, dengan tujuan mengurangi dampak negatif terhadap lingkungan dan memaksimalkan penggunaan kembali atau daur ulang bahan.</string>
    <string name="title_riwayat">History</string>
    <string name="there_is_no_history">No History</string>
    <string name="hasil_analysis">Hasil Analysis</string>
    <string name="title_bantuan">Help Center</string>
    <string name="title_profile">Profile</string>
    <string name="error_empty_field">Can not be empty</string>
    <string name="error_short_password">Password must not be less than 8 characters</string>
    <string name="success_title">Success</string>
    <string name="failed_title">Failed</string>
    <string name="try_again">Try Again</string>
    <string name="continue_title">Continue</string>
    <string name="title_detection">Detection</string>
    <string name="deteksi">Detection</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="back_button_description">Back</string>
    <string name="help">Bantuan</string>
    <string name="how_to_donate_title">Bagaimana cara untuk melakukan donasi baju yang layak pakai?</string>
    <string name="how_to_donate_description">Jika anda sudah mendapatkan hasil analisis dari deteksi baju dan hasilnya dinyatakan layak pakai. Maka langkah selanjutnya yang anda lakukan adalah menghubungi pihak panti dari list panti yang sudah tersedia.</string>
    <string name="how_to_recycle_title">Jika baju tidak layak pakai, apa yang harus dilakukan?</string>
    <string name="how_to_recycle_description">Kami mempunyai mitra pengolahan daur ulang limbah pakaian. Jika hasil analisis dinyatakan tidak layak pakai maka anda bisa menghubungi mitra kami untuk mengirimkan baju tersebut agar bisa di daur ulang kembali.</string>
    <string name="logout_title">Logout\n</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="logout_success">Logout success</string>
    <string name="yes_title">Yes\n</string>
    <string name="no_title">No\n</string>
    <string name="mitra_2">Pengolahan limbah pakaian</string>
    <string name="lokasi_mitra">Bandung</string>
    <string name="message_welcome">Selamat Datang di WearShare</string>
    <string name="message_welcome2">Ayo Bagikan Pakaian Anda Di Sini!</string>
    <string name="title_listpanti">Panti Asuhan</string>
    <string name="title_mitrapengolahan">Mitra Pengolahan Limbah</string>
    <string name="see_all">See All</string>
    <string name="contact">Contact</string>
    <string name="deskripsi_mitra">Mitra pengolahan limbah baju adalah tempat untuk menangani pakaian bekas yang tidak layak, dengan tujuan mengurangi dampak negatif terhadap lingkungan dan memaksimalkan penggunaan kembali atau daur ulang bahan.</string>
    <string name="Deskripsi">Deskripsi</string>
    <string name="Lokasi">Lokasi</string>
    <string name="privacy_policy_title">Kebijakan Privasi</string>
    <string name="section_1_title">1. Informasi yang kami kumpulkan</string>
    <string name="section_1_content">Kami dapat mengumpulkan informasi pribadi seperti nama, email, dan informasi akun lainnya yang diperlukan untuk penggunaan aplikasi kami.</string>
    <string name="section_2_title">2. Penggunaan Aplikasi</string>
    <string name="section_2_content">Aplikasi ini dirancang untuk orang yang ingin melakukan donasi pakaian ke panti asuhan. Anda setuju untuk menggunakan aplikasi ini hanya untuk tujuan yang sah.</string>
    <string name="section_3_title">3. Keamanan Informasi</string>
    <string name="section_3_content">Kami berkomitmen untuk melindungi informasi pribadi anda. Kami menerapkan langkah-langkah keamanan yang sesuai untuk melindungi data anda dari akses atau pengungkapan yang tidak sah.</string>
    <string name="section_4_title">4. Berbagi Informasi</string>
    <string name="section_4_content">Kami tidak akan menjual, memperdagangkan, atau menyewakan informasi pribadi anda kepada pihak ketiga tanpa persetujuan anda, kecuali diwajibkan oleh hukum.</string>
    <string name="back_button">Kembali</string>
    <string name="section_5_title">5. Perubahan Kebijakan Privasi</string>
    <string name="section_5_content"><![CDATA[Kami dapat memperbarui kebijakan privasi ini dari waktu ke waktu. Setiap perubahan akan diposting di aplikasi ini. Anda dianjurkan untuk meninjau kebijakan privasi ini secara berkala untuk tetap mendapat informasi tentang pembaruan apa pun.]]></string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="title_register_page">Register\n</string>
    <string name="loading">load</string>
    <string name="bantuan">Pusat Bantuan</string>
    <string name="empty_image_warning">Masukkan gambar</string>
    <string name="enter_email">Enter your email</string>


</resources>