<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f5f5f5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.MainActivity">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/blue"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_welcome"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_welcome2"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivBanner"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_dashboard" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPantiAsuhanTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_listpanti"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvSeeAll"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tvSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tvPantiAsuhanTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPantiAsuhan"
            android:layout_width="377dp"
            android:layout_height="248dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPantiAsuhanTitle"
            tools:listitem="@layout/item_panti" /> <!-- Replace with your actual item layout -->

        <TextView
            android:id="@+id/tvMitraPengolahanTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_mitrapengolahan"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rvPantiAsuhan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_mitra_2"
            android:layout_width="360dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMitraPengolahanTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar_2"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:src="@drawable/logo_mitra" />

                <TextView
                    android:id="@+id/name_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/mitra_2"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/img_avatar_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@id/img_avatar_2" />

                <TextView
                    android:id="@+id/location_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/lokasi_mitra"
                    android:textColor="#757575"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/img_avatar_2"
                    app:layout_constraintTop_toBottomOf="@id/name_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
